# lab_4__transactions_I_of_ACID

./: .gitignore  main.py  pyproject.toml  settings.py
