[tool.poetry]
name = "lab-4-transactions-i-of-acid"
version = "0.1.0"
description = "A demo of I - isolation of transactions"
authors = ["Grigorii Praskura <gregorypraskura@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.30.1"
fastapi = "^0.111.0"
asyncpg = "^0.29.0"
pydantic-settings = "^2.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
